src/k8/ingress/ingress-controller2/wm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wm-ingress
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wm-app
          servicePort: 80
      - path: /customer
        backend:
          serviceName: wm-customer
          servicePort: 80
